--- a/index.html
+++ b/index.html
@@ -3,24 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cake Shop - Delicious Cakes for Every Occasion</title>
+    <title>SugarBliss - Homemade Cakes for Every Occasion</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-primary text-white text-center py-5">
-        <h1>Welcome to My Cake Shop</h1>
-        <p>Handcrafted cakes with love. Perfect for birthdays, weddings, and more!</p>
-        <a href="buy.html" class="btn btn-light btn-lg">Buy Now</a>
+    <header class="hero bg-primary text-white text-center py-5 animate__animated animate__fadeIn">
+        <div class="container">
+            <img src="images/owner.jpg" alt="Owner holding a cake" class="owner-photo mb-4 animate__animated animate__zoomIn">
+            <h1>Welcome to SugarBliss</h1>
+            <p class="lead">Handcrafted, homemade cakes made with pure, natural ingredients—no artificial additives. Perfect for birthdays, weddings, and special occasions!</p>
+            <a href="buy.html" class="btn btn-light btn-lg animate__animated animate__bounce">Buy Now</a>
+        </div>
     </header>
 
-    <section class="container my-5">
-        <h2>About Us</h2>
-        <p>We use the finest ingredients to create unforgettable cakes. Browse our selection and order today!</p>
+    <section class="container my-5 animate__animated animate__slideInLeft">
+        <h2>Our History</h2>
+        <p>SugarBliss has been a cherished part of our community since 1990, when it started as a small home bakery in a cozy kitchen. Founded by passionate bakers who believed in the magic of simple, wholesome ingredients, we've grown while staying true to our roots. Over the decades, we've delighted generations with cakes that taste like home—baked fresh for birthdays, anniversaries, and celebrations big and small.</p>
+        <p>Every cake is made from scratch using only the finest natural ingredients: real butter, fresh eggs, organic flour, and pure vanilla. No preservatives, no artificial colors or flavors—just pure bliss in every bite. Our story is one of tradition, love, and commitment to quality, passed down through years of perfecting recipes that bring joy to your table.</p>
+    </section>
+
+    <section class="container my-5 bg-light py-4 animate__animated animate__slideInRight">
+        <h2>Why Choose SugarBliss?</h2>
+        <ul>
+            <li>Homemade with love for every occasion.</li>
+            <li>Pure, natural ingredients for authentic flavor.</li>
+            <li>A legacy of excellence spanning over 30 years.</li>
+            <li>Custom cakes tailored to your celebrations.</li>
+        </ul>
     </section>
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 My Cake Shop. All rights reserved.</p>
+        <p>&copy; 2025 SugarBliss. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
