--- a/buy.html
+++ b/buy.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy Cakes - My Cake Shop</title>
+    <title>Buy Cakes - SugarBliss</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-primary text-white text-center py-5">
-        <h1>Our Cakes</h1>
-        <p>Select from our delicious range and order via WhatsApp.</p>
+    <header class="bg-primary text-white text-center py-5 animate__animated animate__fadeIn">
+        <h1>Our Delicious Cakes</h1>
+        <p>Select from our homemade range, crafted with pure ingredients. Order via WhatsApp today!</p>
         <a href="index.html" class="btn btn-light">Back to Home</a>
     </header>
 
@@ -19,7 +20,7 @@
     </section>
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 My Cake Shop. All rights reserved.</p>
+        <p>&copy; 2025 SugarBliss. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
