--- a/buy.html
+++ b/buy.html
@@ -3,24 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy Cakes - SugarBliss</title>
+    <title>Order Cakes - SugarBliss</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-primary text-white text-center py-5 animate__animated animate__fadeIn">
-        <h1>Our Delicious Cakes</h1>
-        <p>Select from our homemade range, crafted with pure ingredients. Order via WhatsApp today!</p>
-        <a href="index.html" class="btn btn-light">Back to Home</a>
-    </header>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <i class="fas fa-birthday-cake me-2"></i>
+                <span class="brand-text">SugarBliss</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#features">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="buy.html">Order Now</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <section class="container my-5">
-        <div class="row" id="cake-grid"></div>
+    <!-- Hero Section -->
+    <section class="order-hero">
+        <div class="hero-background">
+            <div class="floating-elements">
+                <div class="floating-cake cake-1"><i class="fas fa-birthday-cake"></i></div>
+                <div class="floating-cake cake-2"><i class="fas fa-cookie-bite"></i></div>
+                <div class="floating-cake cake-3"><i class="fas fa-ice-cream"></i></div>
+                <div class="floating-cake cake-4"><i class="fas fa-candy-cane"></i></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row align-items-center min-vh-100">
+                <div class="col-lg-8 mx-auto text-center">
+                    <div class="hero-content">
+                        <h1 class="hero-title animate__animated animate__fadeInUp">
+                            <span class="gradient-text">Our Premium</span><br>
+                            Cake Collection
+                        </h1>
+                        <p class="hero-subtitle animate__animated animate__fadeInUp animate__delay-1s">
+                            Handcrafted with love, made with the finest natural ingredients. 
+                            Select your perfect cake and order via WhatsApp instantly.
+                        </p>
+                        <div class="hero-buttons animate__animated animate__fadeInUp animate__delay-2s">
+                            <a href="https://wa.me/31685655527" class="btn btn-success btn-lg me-3">
+                                <i class="fab fa-whatsapp me-2"></i>
+                                WhatsApp Orders
+                            </a>
+                            <a href="index.html" class="btn btn-outline-light btn-lg">
+                                <i class="fas fa-arrow-left me-2"></i>
+                                Back to Home
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 SugarBliss. All rights reserved.</p>
+    <!-- Filter Section -->
+    <section class="filter-section py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="filter-controls text-center">
+                        <h4 class="filter-title">Browse Our Collection</h4>
+                        <div class="filter-buttons">
+                            <button class="filter-btn active" data-filter="all">All Cakes</button>
+                            <button class="filter-btn" data-filter="birthday">Birthday</button>
+                            <button class="filter-btn" data-filter="wedding">Wedding</button>
+                            <button class="filter-btn" data-filter="special">Special</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cakes Grid -->
+    <section class="cakes-section py-5">
+        <div class="container">
+            <div class="row" id="cake-grid">
+                <!-- Cakes will be dynamically loaded here -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Loading State -->
+    <div id="loading-state" class="text-center py-5">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+        <p class="mt-3">Loading our delicious cakes...</p>
+    </div>
+
+    <!-- Empty State -->
+    <div id="empty-state" class="text-center py-5" style="display: none;">
+        <i class="fas fa-birthday-cake fa-4x text-muted mb-4"></i>
+        <h4>No cakes found</h4>
+        <p class="text-muted">We're working on adding more delicious cakes to our collection.</p>
+        <a href="https://wa.me/31685655527" class="btn btn-primary">
+            <i class="fab fa-whatsapp me-2"></i>
+            Request Custom Cake
+        </a>
+    </div>
+
+    <!-- CTA Section -->
+    <section class="cta-section py-5">
+        <div class="container">
+            <div class="cta-content text-center">
+                <h2 class="cta-title">Don't See What You're Looking For?</h2>
+                <p class="cta-subtitle">We create custom cakes for any occasion. Contact us to discuss your special requirements.</p>
+                <div class="cta-buttons">
+                    <a href="https://wa.me/31685655527" class="btn btn-success btn-lg me-3">
+                        <i class="fab fa-whatsapp me-2"></i>
+                        Custom Order
+                    </a>
+                    <a href="index.html" class="btn btn-outline-primary btn-lg">
+                        <i class="fas fa-home me-2"></i>
+                        Back to Home
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="footer-brand">
+                        <i class="fas fa-birthday-cake me-2"></i>
+                        <span class="brand-text">SugarBliss</span>
+                    </div>
+                    <p class="footer-description">
+                        Crafting exceptional cakes with love and tradition since 1990. 
+                        Your celebrations deserve the very best.
+                    </p>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <h5>Quick Links</h5>
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="buy.html">Order Now</a></li>
+                        <li><a href="https://wa.me/31685655527">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <h5>Contact Info</h5>
+                    <div class="contact-info">
+                        <p><i class="fas fa-phone me-2"></i> +31 685 655 527</p>
+                        <p><i class="fab fa-whatsapp me-2"></i> WhatsApp Orders</p>
+                        <p><i class="fas fa-envelope me-2"></i> info@sugarbliss.nl</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="footer-divider">
+            <div class="footer-bottom">
+                <p>&copy; 2025 SugarBliss. All rights reserved. Made with <i class="fas fa-heart text-danger"></i> for cake lovers.</p>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
