--- a/buy.html
+++ b/buy.html
@@ -65,6 +65,10 @@
                             Select your perfect cake and order via WhatsApp instantly.
                         </p>
                         <div class="hero-buttons animate__animated animate__fadeInUp animate__delay-2s">
+                            <a href="#cakes" class="btn btn-primary btn-lg me-3">
+                                <i class="fas fa-birthday-cake me-2"></i>
+                                Browse Cakes
+                            </a>
                             <a href="https://wa.me/31685655527" class="btn btn-success btn-lg me-3">
                                 <i class="fab fa-whatsapp me-2"></i>
                                 WhatsApp Orders
@@ -74,9 +78,9 @@
                                 Back to Home
                             </a>
                         </div>
-                        <div class="scroll-indicator animate__animated animate__bounce animate__delay-3s">
-                            <i class="fas fa-chevron-down"></i>
-                            <span>Browse our cakes below</span>
+                        <div class="hero-note animate__animated animate__fadeInUp animate__delay-3s">
+                            <i class="fas fa-info-circle me-2"></i>
+                            <span>Scroll down to see our full collection</span>
                         </div>
                     </div>
                 </div>
@@ -104,7 +108,7 @@
     </section>
 
     <!-- Cakes Grid -->
-    <section class="cakes-section py-5">
+    <section id="cakes" class="cakes-section py-5">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 text-center">
