--- a/buy.html
+++ b/buy.html
@@ -42,46 +42,23 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="order-hero">
-        <div class="hero-background">
-            <div class="floating-elements">
-                <div class="floating-cake cake-1"><i class="fas fa-birthday-cake"></i></div>
-                <div class="floating-cake cake-2"><i class="fas fa-cookie-bite"></i></div>
-                <div class="floating-cake cake-3"><i class="fas fa-ice-cream"></i></div>
-                <div class="floating-cake cake-4"><i class="fas fa-candy-cane"></i></div>
-            </div>
-        </div>
+    <!-- Page Header -->
+    <section class="page-header py-5">
         <div class="container">
-            <div class="row align-items-center" style="min-height: 50vh;">
-                <div class="col-lg-8 mx-auto text-center">
-                    <div class="hero-content">
-                        <h1 class="hero-title animate__animated animate__fadeInUp">
-                            <span class="gradient-text">Our Premium</span><br>
-                            Cake Collection
-                        </h1>
-                        <p class="hero-subtitle animate__animated animate__fadeInUp animate__delay-1s">
-                            Handcrafted with love, made with the finest natural ingredients. 
-                            Select your perfect cake and order via WhatsApp instantly.
-                        </p>
-                        <div class="hero-buttons animate__animated animate__fadeInUp animate__delay-2s">
-                            <a href="#cakes" class="btn btn-primary btn-lg me-3">
-                                <i class="fas fa-birthday-cake me-2"></i>
-                                Browse Cakes
-                            </a>
-                            <a href="https://wa.me/31685655527" class="btn btn-success btn-lg me-3">
-                                <i class="fab fa-whatsapp me-2"></i>
-                                WhatsApp Orders
-                            </a>
-                            <a href="index.html" class="btn btn-outline-light btn-lg">
-                                <i class="fas fa-arrow-left me-2"></i>
-                                Back to Home
-                            </a>
-                        </div>
-                        <div class="hero-note animate__animated animate__fadeInUp animate__delay-3s">
-                            <i class="fas fa-info-circle me-2"></i>
-                            <span>Scroll down to see our full collection</span>
-                        </div>
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1 class="page-title">
+                        <span class="title-accent">Our Premium</span> Cake Collection
+                    </h1>
+                    <p class="page-subtitle">
+                        Handcrafted with love, made with the finest natural ingredients. 
+                        Select your perfect cake and order via WhatsApp instantly.
+                    </p>
+                    <div class="header-actions">
+                        <a href="index.html" class="btn btn-outline-primary">
+                            <i class="fas fa-arrow-left me-2"></i>
+                            Back to Home
+                        </a>
                     </div>
                 </div>
             </div>
@@ -110,14 +87,6 @@
     <!-- Cakes Grid -->
     <section id="cakes" class="cakes-section py-5">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-12 text-center">
-                    <h2 class="section-title">
-                        <span class="title-accent">Delicious</span> Cakes
-                    </h2>
-                    <p class="section-subtitle">Choose from our premium collection of handcrafted cakes</p>
-                </div>
-            </div>
             <div class="row" id="cake-grid">
                 <!-- Cakes will be dynamically loaded here -->
             </div>
@@ -143,21 +112,39 @@
         </a>
     </div>
 
-    <!-- CTA Section -->
-    <section class="cta-section py-5">
+    <!-- Custom Order CTA -->
+    <section class="custom-order-section py-5">
         <div class="container">
-            <div class="cta-content text-center">
-                <h2 class="cta-title">Don't See What You're Looking For?</h2>
-                <p class="cta-subtitle">We create custom cakes for any occasion. Contact us to discuss your special requirements.</p>
-                <div class="cta-buttons">
-                    <a href="https://wa.me/31685655527" class="btn btn-success btn-lg me-3">
-                        <i class="fab fa-whatsapp me-2"></i>
-                        Custom Order
-                    </a>
-                    <a href="index.html" class="btn btn-outline-primary btn-lg">
-                        <i class="fas fa-home me-2"></i>
-                        Back to Home
-                    </a>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="custom-order-card text-center">
+                        <div class="custom-order-icon">
+                            <i class="fas fa-magic"></i>
+                        </div>
+                        <h3 class="custom-order-title">Want Something Special?</h3>
+                        <p class="custom-order-description">
+                            We create custom cakes for any occasion! Whether it's a unique design, 
+                            special dietary requirements, or a specific theme, we're here to make your vision come true.
+                        </p>
+                        <div class="custom-order-features">
+                            <div class="feature-item">
+                                <i class="fas fa-palette"></i>
+                                <span>Custom Designs</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-heart"></i>
+                                <span>Personal Touch</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-star"></i>
+                                <span>Premium Quality</span>
+                            </div>
+                        </div>
+                        <a href="https://wa.me/31685655527" class="btn btn-success btn-lg">
+                            <i class="fab fa-whatsapp me-2"></i>
+                            Order Custom Cake
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
