--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h2 class="section-title">
                             <span class="title-accent">Our</span> Story
                         </h2>
-                        <p class="lead">Since 1990, SugarBliss has been crafting exceptional cakes that bring joy to every celebration.</p>
+                        <p class="lead">Since 2015, SugarBliss has been crafting exceptional cakes that bring joy to every celebration.</p>
                         <p>What started as a small home bakery in a cozy kitchen has grown into a beloved community institution. Founded by passionate bakers who believed in the magic of simple, wholesome ingredients, we've maintained our commitment to quality while expanding our reach.</p>
                         <p>Every cake is made from scratch using only the finest natural ingredients: real butter, fresh eggs, organic flour, and pure vanilla. No preservatives, no artificial colors or flavors—just pure bliss in every bite.</p>
                         <div class="about-features">
@@ -266,7 +266,7 @@
                 <div class="col-lg-4 mb-4">
                     <h5>Contact Info</h5>
                     <div class="contact-info">
-                        <p><i class="fas fa-phone me-2"></i> +31 685 655 527</p>
+                        <p><i class="fas fa-phone me-2"></i> +31684125538</p>
                         <p><i class="fab fa-whatsapp me-2"></i> WhatsApp Orders</p>
                         <p><i class="fas fa-envelope me-2"></i> info@sugarbliss.nl</p>
                     </div>
