--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
                         <a class="nav-link" href="buy.html">Order Now</a>
                     </li>
                 </ul>
+                <div class="navbar-social d-none d-lg-flex ms-3">
+                    <a href="YOUR_INSTAGRAM_URL" target="_blank" class="nav-social-link me-2">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="YOUR_FACEBOOK_URL" target="_blank" class="nav-social-link me-2">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="YOUR_YOUTUBE_URL" target="_blank" class="nav-social-link">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
@@ -266,9 +277,23 @@
                 <div class="col-lg-4 mb-4">
                     <h5>Contact Info</h5>
                     <div class="contact-info">
-                        <p><i class="fas fa-phone me-2"></i> +31684125538</p>
+                        <p><i class="fas fa-phone me-2"></i> +31 684 125 538</p>
                         <p><i class="fab fa-whatsapp me-2"></i> WhatsApp Orders</p>
                         <p><i class="fas fa-envelope me-2"></i> info@sugarbliss.nl</p>
+                    </div>
+                    <div class="social-links mt-3">
+                        <h6>Follow Us</h6>
+                        <div class="social-icons">
+                            <a href="YOUR_INSTAGRAM_URL" target="_blank" class="social-link">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="YOUR_FACEBOOK_URL" target="_blank" class="social-link">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="YOUR_YOUTUBE_URL" target="_blank" class="social-link">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
