--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </li>
                 </ul>
                 <div class="navbar-social d-none d-lg-flex ms-3">
-                    <a href="YOUR_INSTAGRAM_URL" target="_blank" class="nav-social-link me-2">
+                    <a href="https://www.instagram.com/sugarblissbysoumya?igsh=bXd5dzdkZDJ0ZW9u" target="_blank" class="nav-social-link me-2">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="YOUR_FACEBOOK_URL" target="_blank" class="nav-social-link me-2">
