--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <div class="social-links mt-3">
                         <h6>Follow Us</h6>
                         <div class="social-icons">
-                            <a href="YOUR_INSTAGRAM_URL" target="_blank" class="social-link">
+                            <a href="https://www.instagram.com/sugarblissbysoumya?igsh=bXd5dzdkZDJ0ZW9u" target="_blank" class="social-link">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="YOUR_FACEBOOK_URL" target="_blank" class="social-link">
