--- a/buy.html
+++ b/buy.html
@@ -43,7 +43,22 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="page-header py-5">
+    <section class="page-header py-5" style="position: relative; overflow: hidden;">
+        <!-- Snow overlay -->
+        <div class="snow">
+            <span class="snowflake" style="left:6%; animation-duration: 9s; animation-delay: 0s;">✦</span>
+            <span class="snowflake" style="left:18%; animation-duration: 11s; animation-delay: 1s;">✧</span>
+            <span class="snowflake" style="left:28%; animation-duration: 10s; animation-delay: 0.6s;">✦</span>
+            <span class="snowflake" style="left:40%; animation-duration: 12s; animation-delay: 1.8s;">✧</span>
+            <span class="snowflake" style="left:52%; animation-duration: 10.5s; animation-delay: 0.9s;">✦</span>
+            <span class="snowflake" style="left:64%; animation-duration: 13s; animation-delay: 2.2s;">✧</span>
+            <span class="snowflake" style="left:76%; animation-duration: 9.5s; animation-delay: 0.4s;">✦</span>
+            <span class="snowflake" style="left:88%; animation-duration: 12.5s; animation-delay: 1.6s;">✧</span>
+        </div>
+        <!-- Santa animation -->
+        <div class="santa-ride" style="bottom: 0; font-size: 1.6rem;">
+            <span>🎅🛷✨</span>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
@@ -54,6 +69,21 @@
                         Handcrafted with love, made with the finest natural ingredients. 
                         Select your perfect cake and order via WhatsApp instantly.
                     </p>
+                    <!-- Christmas preorder banner -->
+                    <div class="christmas-banner">
+                        <span class="badge">Christmas</span>
+                        <span>Pre-order your Christmas Plum Cakes now!</span>
+                    </div>
+                    <div class="christmas-actions">
+                        <a href="#cakes" class="btn btn-success btn-lg">
+                            <i class="fas fa-gift me-2"></i>
+                            Pre-order Now
+                        </a>
+                        <a href="https://wa.me/31684125538" class="btn btn-outline-primary btn-lg">
+                            <i class="fab fa-whatsapp me-2"></i>
+                            WhatsApp Us
+                        </a>
+                    </div>
                     <div class="header-actions">
                         <a href="index.html" class="btn btn-outline-primary">
                             <i class="fas fa-arrow-left me-2"></i>
@@ -183,14 +213,8 @@
                     <div class="social-links mt-3">
                         <h6>Follow Us</h6>
                         <div class="social-icons">
-                            <a href="YOUR_INSTAGRAM_URL" target="_blank" class="social-link">
+                            <a href="https://www.instagram.com/sugarblissbysoumya?igsh=bXd5dzdkZDJ0ZW9u" target="_blank" class="social-link">
                                 <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="YOUR_FACEBOOK_URL" target="_blank" class="social-link">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="YOUR_YOUTUBE_URL" target="_blank" class="social-link">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
