--- a/index.html
+++ b/index.html
@@ -39,14 +39,8 @@
                     </li>
                 </ul>
                 <div class="navbar-social d-none d-lg-flex ms-3">
-                    <a href="https://www.instagram.com/sugarblissbysoumya?igsh=bXd5dzdkZDJ0ZW9u" target="_blank" class="nav-social-link me-2">
+                    <a href="https://www.instagram.com/sugarblissbysoumya?igsh=bXd5dzdkZDJ0ZW9u" target="_blank" class="nav-social-link">
                         <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="YOUR_FACEBOOK_URL" target="_blank" class="nav-social-link me-2">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-                    <a href="YOUR_YOUTUBE_URL" target="_blank" class="nav-social-link">
-                        <i class="fab fa-youtube"></i>
                     </a>
                 </div>
             </div>
@@ -61,6 +55,23 @@
                 <div class="floating-cake cake-2"><i class="fas fa-cookie-bite"></i></div>
                 <div class="floating-cake cake-3"><i class="fas fa-ice-cream"></i></div>
                 <div class="floating-cake cake-4"><i class="fas fa-candy-cane"></i></div>
+            </div>
+            <!-- Snow overlay -->
+            <div class="snow">
+                <span class="snowflake" style="left:5%; animation-duration: 8s; animation-delay: 0s;">✦</span>
+                <span class="snowflake" style="left:15%; animation-duration: 10s; animation-delay: 1s;">✧</span>
+                <span class="snowflake" style="left:25%; animation-duration: 9s; animation-delay: 0.5s;">✦</span>
+                <span class="snowflake" style="left:35%; animation-duration: 12s; animation-delay: 2s;">✧</span>
+                <span class="snowflake" style="left:45%; animation-duration: 11s; animation-delay: 1.2s;">✦</span>
+                <span class="snowflake" style="left:55%; animation-duration: 9.5s; animation-delay: 0.8s;">✧</span>
+                <span class="snowflake" style="left:65%; animation-duration: 13s; animation-delay: 2.5s;">✦</span>
+                <span class="snowflake" style="left:75%; animation-duration: 10.5s; animation-delay: 1.8s;">✧</span>
+                <span class="snowflake" style="left:85%; animation-duration: 9s; animation-delay: 0.3s;">✦</span>
+                <span class="snowflake" style="left:95%; animation-duration: 12.5s; animation-delay: 2.2s;">✧</span>
+            </div>
+            <!-- Santa animation -->
+            <div class="santa-ride">
+                <span>🎅🛷✨</span>
             </div>
         </div>
         <div class="container">
@@ -83,6 +94,21 @@
                             <a href="#about" class="btn btn-outline-light btn-lg">
                                 <i class="fas fa-play me-2"></i>
                                 Learn More
+                            </a>
+                        </div>
+                        <!-- Christmas preorder banner -->
+                        <div class="christmas-banner animate__animated animate__fadeInUp animate__delay-2s">
+                            <span class="badge">Christmas</span>
+                            <span>Pre-order your Christmas Plum Cakes now!</span>
+                        </div>
+                        <div class="christmas-actions animate__animated animate__fadeInUp animate__delay-3s">
+                            <a href="buy.html" class="btn btn-success btn-lg">
+                                <i class="fas fa-gift me-2"></i>
+                                Pre-order Now
+                            </a>
+                            <a href="https://wa.me/31684125538" class="btn btn-outline-light btn-lg">
+                                <i class="fab fa-whatsapp me-2"></i>
+                                WhatsApp Us
                             </a>
                         </div>
                         <div class="hero-stats animate__animated animate__fadeInUp animate__delay-3s">
@@ -286,12 +312,6 @@
                         <div class="social-icons">
                             <a href="https://www.instagram.com/sugarblissbysoumya?igsh=bXd5dzdkZDJ0ZW9u" target="_blank" class="social-link">
                                 <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="YOUR_FACEBOOK_URL" target="_blank" class="social-link">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="YOUR_YOUTUBE_URL" target="_blank" class="social-link">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
