--- a/buy.html
+++ b/buy.html
@@ -55,8 +55,9 @@
             <span class="snowflake" style="left:76%; animation-duration: 9.5s; animation-delay: 0.4s;">✦</span>
             <span class="snowflake" style="left:88%; animation-duration: 12.5s; animation-delay: 1.6s;">✧</span>
         </div>
-        <!-- Santa animation -->
-        <div class="santa-ride" style="bottom: 0; font-size: 1.6rem;">
+        <!-- Christmas star and Santa animation -->
+        <div class="christmas-star">✩</div>
+        <div class="santa-ride" style="bottom: 0; font-size: 1.8rem;">
             <span>🎅🛷✨</span>
         </div>
         <div class="container">
@@ -69,8 +70,8 @@
                         Handcrafted with love, made with the finest natural ingredients. 
                         Select your perfect cake and order via WhatsApp instantly.
                     </p>
-                    <!-- Christmas preorder banner -->
-                    <div class="christmas-banner">
+                    <!-- Christmas preorder banner (high contrast) -->
+                    <div class="christmas-banner contrast">
                         <span class="badge">Christmas</span>
                         <span>Pre-order your Christmas Plum Cakes now!</span>
                     </div>
