--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-6">
                     <div class="about-content">
                         <h2 class="section-title">
-                            <span class="title-accent">Our</span> Story
+                            <span class="title-accent"></span> Our Story
                         </h2>
                         <p class="lead">Since 2015, SugarBliss has been crafting exceptional cakes that bring joy to every celebration.</p>
                         <p>What started as a small home bakery in a cozy kitchen has grown into a beloved community institution. Founded by passionate bakers who believed in the magic of simple, wholesome ingredients, we've maintained our commitment to quality while expanding our reach.</p>
