--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="section-title">
-                    Why Choose <span class="title-accent">SugarBliss</span>?
+                    Why Choose <span class="title-accent"></span>SugarBliss?
                 </h2>
                 <p class="section-subtitle">Experience the difference that passion and quality make</p>
             </div>
